--- a/NetUv/NetUv.vcxproj.filters
+++ b/NetUv/NetUv.vcxproj.filters
@@ -6,5 +6,6 @@
   <ItemGroup>
     <ClCompile Include="UvLoop.cpp" />
     <ClCompile Include="UvTcp.cpp" />
+    <ClCompile Include="UvException.cpp" />
   </ItemGroup>
 </Project>
