--- a/NetUv.Test/NetUv.Test.csproj
+++ b/NetUv.Test/NetUv.Test.csproj
@@ -39,6 +39,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="UvLoopTest.cs" />
+    <Compile Include="UvTcpTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="nunit.framework, Version=2.6.2.12296, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
