--- a/NetUv/NetUv.vcxproj.filters
+++ b/NetUv/NetUv.vcxproj.filters
@@ -7,5 +7,8 @@
     <ClCompile Include="UvLoop.cpp" />
     <ClCompile Include="UvTcp.cpp" />
     <ClCompile Include="UvException.cpp" />
+    <ClCompile Include="UvBuffer.cpp" />
+    <ClCompile Include="UvHandle.cpp" />
+    <ClCompile Include="UvStream.cpp" />
   </ItemGroup>
 </Project>
