--- a/NetUv/NetUv.vcxproj.filters
+++ b/NetUv/NetUv.vcxproj.filters
@@ -10,5 +10,6 @@
     <ClCompile Include="UvBuffer.cpp" />
     <ClCompile Include="UvHandle.cpp" />
     <ClCompile Include="UvStream.cpp" />
+    <ClCompile Include="UvAsync.cpp" />
   </ItemGroup>
 </Project>
