--- a/NetUv.Test/NetUv.Test.csproj
+++ b/NetUv.Test/NetUv.Test.csproj
@@ -38,6 +38,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="UvAsyncTest.cs" />
     <Compile Include="UvBufferTest.cs" />
     <Compile Include="UvLoopTest.cs" />
     <Compile Include="UvTcpPingPongTest.cs" />
